--- a/responsive.css
+++ b/responsive.css
@@ -52,4 +52,15 @@
   #experience hr{
     margin: 5px auto 20px auto;
   }
+
+  .top{
+        right: 15.5%;
+        left: 84.25%;
+}
+.social{
+  width: 50%;
+}
+.footer{
+  padding: 10px 0;
+}
 }
