--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
 * {
   margin: 0;
   padding: 0;
+  scroll-behavior: smooth;
 }
 
 .container {
@@ -14,14 +15,14 @@ body {
   font-family: Poppins, sans-serif;
 }
 
-.nav {
-  position: -webkit-sticky;
-  position: sticky;
+.nav{
   box-shadow: 0px 0px 2px 0px rgba(0, 0, 0, 0.1);
   border-bottom: 7px solid;
-  border-image: linear-gradient(to right, rgb(255, 72, 164), rgb(255, 69, 0));
+  border-image: linear-gradient(to right,blueviolet, rgb(255, 72, 164), orange, red);
   border-image-slice: 1;
   background:white;
+    position: sticky;
+  top: 0;
 }
 
 .nav .container {
@@ -69,7 +70,7 @@ color: black;
 
 
 .nav .button{
-    padding: 10px 20px !important;
+    padding: 10px 10px !important;
     color: white;
 }
 
@@ -112,6 +113,7 @@ p {
   margin-bottom: 30px;
   width: 90%;
 }
+
 .button {
   background: linear-gradient(to right, orangered, red);
   color: white;
@@ -176,10 +178,10 @@ img {
   width: 100%;
 }
 
-#experience .single,
 #experience .single {
   width: 25%;
   padding: 30px;
+  background-color: white;
 }
 
 #experience .single:first-child {
@@ -207,8 +209,46 @@ box-shadow: 1px 1px 20px 1px rgba(255, 0, 200, 0.1);
     border-top: 1px solid lightgray;
     text-transform: uppercase;
     text-align: center;
-    padding: 10px 0;
 }
+
+.footer .container{
+  display: flex;
+  justify-content: space-between;
+  height: 10vh;
+align-items: center;
+}
+
 .footer i{
     color: red;
+}
+
+.social{
+  width: 15%;
+  display: flex;
+  justify-content: space-between;
+  cursor: pointer;
+}
+
+.social i{
+  font-size: 25px;
+  color: orangered;
+}
+
+
+.top{
+  position: fixed;
+        bottom: 10px;
+        float: right;
+        right: 5.5%;
+        left: 94.25%;
+        max-width: 30px;
+        width: 100%;
+        background: linear-gradient(to right, rgb(255, 72, 164), rgb(255, 0, 106));
+        padding: 5px 8px;
+        border-radius: 50%;
+}
+
+.top i{
+ color: white;
+  font-size: 30px;
 }
