--- a/responsive.css
+++ b/responsive.css
@@ -38,6 +38,10 @@
      text-align: center;
      padding-bottom: 10px;
   }
+  .nav h1,
+  .brand{
+    font-size: 35px;
+  }
    #experience .single {
     width: 80%;
     margin-bottom: 20px;
