--- a/style.css
+++ b/style.css
@@ -246,6 +246,7 @@ align-items: center;
         background: linear-gradient(to right, rgb(255, 72, 164), rgb(255, 0, 106));
         padding: 8px 6px;
         border-radius: 50%;
+text-align:center;
 }
 
 .top i{
