--- a/style.css
+++ b/style.css
@@ -15,12 +15,10 @@ body {
   font-family: Poppins, sans-serif;
 }
 
+    /* navbar start */
 .nav{
   box-shadow: 0px 0px 2px 0px rgba(0, 0, 0, 0.1);
-  border-bottom: 7px solid;
-  border-image: linear-gradient(to right,blueviolet, rgb(255, 72, 164), orange, red);
-  border-image-slice: 1;
-  background:white;
+background:white;
     position: sticky;
   top: 0;
 }
@@ -73,7 +71,9 @@ color: black;
     padding: 10px 5px !important;
     color: white;
 }
+/* navbar end */
 
+/* hero start */
 #hero h1,
 #dream h1 {
   font-size: 45px;
@@ -149,7 +149,9 @@ img {
   background-repeat: no-repeat;
   background-size: cover;
 }
+/* hero end */
 
+/* dream start */
 #dream {
   background: url("/images/dream-bg.png") no-repeat;
   background-position: right;
@@ -159,7 +161,9 @@ img {
   box-shadow: 1px 1px 20px 10px rgba(255, 0, 200, 0.15);
   background: linear-gradient(to right, rgb(255, 72, 164), rgb(255, 0, 106));
 }
+/* dream end */
 
+/* experience start */
 #experience {
   background: url("/images/exp-bg.png") no-repeat;
   background-position: left;
@@ -204,7 +208,9 @@ box-shadow: 1px 1px 20px 1px rgba(255, 0, 200, 0.1);
   border-image-slice: 1;
 box-shadow: 1px 1px 20px 1px rgba(255, 0, 200, 0.1);
 }
+/* experience end */
 
+/* footer start */
 .footer{
     border-top: 1px solid lightgray;
     text-transform: uppercase;
@@ -223,6 +229,7 @@ align-items: center;
 }
 
 .social{
+  margin-top: 10px;
   width: 15%;
   display: flex;
   justify-content: space-between;
@@ -233,8 +240,9 @@ align-items: center;
   font-size: 25px;
   color: orangered;
 }
+/* footer end */
 
-
+/*top start */
 .top{
   position: fixed;
         bottom: 10px;
@@ -244,11 +252,13 @@ align-items: center;
         max-width: 30px;
         width: 100%;
         background: linear-gradient(to right, rgb(255, 72, 164), rgb(255, 0, 106));
-        padding: 5px 10px;
+        padding: 8px 6px;
         border-radius: 50%;
+        text-align: center;
 }
 
 .top i{
  color: white;
   font-size: 20px;
 }
+/* top end */
