--- a/responsive.css
+++ b/responsive.css
@@ -39,6 +39,10 @@ img{
   .nav{
      text-align: center;
      padding-bottom: 10px;
+     box-shadow: 1px 1px 10px 1px rgba(0,0,0,0.1);
+  }
+  .nav a{
+    padding: 5px 10px;
   }
   .nav h1,
   .brand{
